Grain methods can now be used to override existing grains